# building-effective-agents

./: .env  .env.example  .gitignore  Makefile  README.md  pyproject.toml
agent/: README.md  agent.py
evaluator-optimizer/: README.md  workflow.py
orchestrator-workers/: README.md  workflow.py
parallelization/: README.md  workflow.py
prompt-chaining/: README.md  workflow.py
routing/: README.md  workflow.py
