[project]
name = "building-effective-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.17",
    "langchain-ollama>=1.1.0",
    "langfuse>=4.5.1",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
]
